Test: Replaced Ethernet queue.typename parameter assignments with 2 assignments.

--- a/examples/diffserv/onedomain/omnetpp.ini
+++ b/examples/diffserv/onedomain/omnetpp.ini
@@ -116,7 +116,9 @@ extends = Apps, Exp1
 [Config Exp17]
 extends = Apps, Exp1
 
-**.queue.typename = "DropTailQueue"
+**.ppp[*].queue.typename = "DropTailQueue"
+**.eth[*].queue.typename = "EtherQosQueue"
+**.eth[*].queue.dataQueue.typename = "DropTailQueue"
 **.queue.frameCapacity = 400
 
 #
