--- a/tests/fingerprint/ethernet-hub.ini
+++ b/tests/fingerprint/ethernet-hub.ini
@@ -13,7 +13,8 @@ network = inet.tests.ethernet.HostsWithHub
 **.duplexMode = ${duplex = false}
 **.duplexEnabled = ${duplex}
 **.frameBursting = ${burst = true, false}
-**.queue.typename = ${queue = "DropTailQueue", ""}
+**.queue.typename = ${queue = "EtherQosQueue", ""}
+**.queue.dataQueue.typename = "DropTailQueue"
 **.queue.dataQueue.frameCapacity = 100000  # external queue
 **.txQueueLimit = 100000  # internal queue
 
