--- a/tests/fingerprint/ethernet-bus-reconnect.ini
+++ b/tests/fingerprint/ethernet-bus-reconnect.ini
@@ -16,7 +16,8 @@ network = inet.tests.ethernet.HostsWithBus
 **.duplexMode = ${duplex = false}
 **.duplexEnabled = ${duplex}
 **.frameBursting = ${burst = true, false}
-**.queue.typename = ${queue = "DropTailQueue", ""}
+**.queue.typename = ${queue = "EtherQosQueue", ""}
+**.queue.dataQueue.typename = "DropTailQueue"
 **.queue.dataQueue.frameCapacity = 100000  # external queue
 **.txQueueLimit = 100000  # internal queue
  
