--- a/tests/fingerprint/ethernet-switch.ini
+++ b/tests/fingerprint/ethernet-switch.ini
@@ -13,7 +13,8 @@ network = inet.tests.ethernet.HostsWithSwitch
 **.duplexMode = ${duplex = true}
 **.duplexEnabled = ${duplex}
 **.frameBursting = ${burst = false}
-**.queue.typename = ${queue = "DropTailQueue", ""}
+**.queue.typename = ${queue = "EtherQosQueue", ""}
+**.queue.dataQueue.typename = "DropTailQueue"
 **.queue.dataQueue.frameCapacity = 100000  # external queue
 **.txQueueLimit = 100000  # internal queue
 
