manual corrections after the script

--- a/examples/inet/hierarchical99/networklayer.ini
+++ b/examples/inet/hierarchical99/networklayer.ini
@@ -27,7 +27,7 @@ network = Hierarchical99
 
 [Config Generic]
 **.networkConfigurator.typename = "NextHopNetworkConfigurator" #TODO autoconverted
-**.networkLayer.typename = "NextHopNetworkLayer" #TODO autoconverted
+**.generic.typename = "NextHopNetworkLayer" #TODO autoconverted
 
 **.hasIpv4 = false
 **.hasIpv6 = false
@@ -42,8 +42,8 @@ network = Hierarchical99
 **.hasIpv6 = false
 **.hasGn = true
 
-**.networkLayer.typename = "SimpleNetworkLayer" #TODO autoconverted
-**.generic.networkProtocol.typename = "Flooding" #TODO autoconverted
+**.generic.typename = "SimpleNetworkLayer" #TODO autoconverted
+**.generic.np.typename = "Flooding" #TODO autoconverted
 
 [Config ProbabilisticBroadcast]
 **.networkConfigurator.typename = "Ipv4NetworkConfigurator" #TODO autoconverted
@@ -54,8 +54,8 @@ network = Hierarchical99
 **.hasIpv6 = false
 **.hasGn = true
 
-**.networkLayer.typename = "SimpleNetworkLayer" #TODO autoconverted
-**.generic.networkProtocol.typename = "ProbabilisticBroadcast" #TODO autoconverted
+**.generic.typename = "SimpleNetworkLayer" #TODO autoconverted
+**.generic.np.typename = "ProbabilisticBroadcast" #TODO autoconverted
 
 [Config AdaptiveProbabilisticBroadcast]
 **.networkConfigurator.typename = "Ipv4NetworkConfigurator" #TODO autoconverted
@@ -66,8 +66,8 @@ network = Hierarchical99
 **.hasIpv6 = false
 **.hasGn = true
 
-**.networkLayer.typename = "SimpleNetworkLayer" #TODO autoconverted
-**.generic.networkProtocol.typename = "AdaptiveProbabilisticBroadcast" #TODO autoconverted
+**.generic.typename = "SimpleNetworkLayer" #TODO autoconverted
+**.generic.np.typename = "AdaptiveProbabilisticBroadcast" #TODO autoconverted
 
 [Config WiseRoute]
 **.networkConfigurator.typename = "Ipv4NetworkConfigurator" #TODO autoconverted
@@ -78,6 +78,6 @@ network = Hierarchical99
 **.hasIpv6 = false
 **.hasGn = true
 
-**.networkLayer.typename = "WiseRouteNetworkLayer" #TODO autoconverted
+**.generic.typename = "WiseRouteNetworkLayer" #TODO autoconverted
 **.np.sinkAddress = "router1"
 
