--- a/examples/manetrouting/dsdv/omnetpp.ini
+++ b/examples/manetrouting/dsdv/omnetpp.ini
@@ -51,7 +51,7 @@ description = multiple network protocols
 **.host[*].hasIpv4 = true
 **.host[*].hasIpv6 = true
 **.host[*].hasGn = true
-**.host[*].networkLayer.typename = "NextHopNetworkLayer" #TODO autoconverted
+**.host[*].generic.typename = "NextHopNetworkLayer" #TODO autoconverted
 
 [Config MultiIPv4]
 description = using Ipv4 on multiple network protocols
