--- a/examples/manetrouting/dymo/omnetpp.ini
+++ b/examples/manetrouting/dymo/omnetpp.ini
@@ -63,7 +63,7 @@ extends=_IPv6
 [Config _Generic]
 description = base for generic
 **.host[*].hasGn = true
-**.host[*].networkLayer.typename = "NextHopNetworkLayer" #TODO autoconverted
+**.host[*].generic.typename = "NextHopNetworkLayer" #TODO autoconverted
 **.dymo.routingTableModule = "^.generic.routingTable"
 **.dymo.networkProtocolModule = "^.generic.nextHop"
 *.host[0].app[0].destAddr = "host[1](modulepath)"
@@ -79,7 +79,7 @@ description = multiple network protocols
 **.host[*].hasIpv4 = true
 **.host[*].hasIpv6 = true
 **.host[*].hasGn = true
-**.host[*].networkLayer.typename = "NextHopNetworkLayer" #TODO autoconverted
+**.host[*].generic.typename = "NextHopNetworkLayer" #TODO autoconverted
 
 [Config MultiIPv4]
 description = using Ipv4 on multiple network protocols
