--- a/examples/manetrouting/gpsr/omnetpp.ini
+++ b/examples/manetrouting/gpsr/omnetpp.ini
@@ -50,7 +50,7 @@ description = base config for Ipv6
 
 [Config _Generic]
 description = base config for generic network
-**.networkLayer.typename = "NextHopNetworkLayer" #TODO autoconverted
+**.generic.typename = "NextHopNetworkLayer" #TODO autoconverted
 **.gpsr.networkProtocolModule = "^.generic.nextHop"
 **.gpsr.routingTableModule = "^.generic.routingTable"
 *.host[0].app[0].destAddr = "host[1](modulepath)"
