All: Replaced mgmtType parameter assignments to mgmt.typename assignments.

--- a/examples/wireless/mactest/omnetpp.ini
+++ b/examples/wireless/mactest/omnetpp.ini
@@ -65,7 +65,7 @@ extends = MacBase
 **.srvHost.udpApp[0].localPort = 21
 **.srvHost.udpApp[1].localPort = 5000
 
-**.wlan[*].mgmtType = "Ieee80211MgmtAdhoc"
+**.wlan[*].mgmt.typename = "Ieee80211MgmtAdhoc"
 **.wlan[*].classifier.typename = "ExampleQosClassifier" #TODO autoconverted
 
 **.wlan[*].mac.qosStation = true
@@ -92,5 +92,5 @@ extends = MacBase
 **.srvHost.udpApp[0].typename = "UdpSink"
 **.srvHost.udpApp[0].localPort = 21
 
-**.wlan[*].mgmtType = "Ieee80211MgmtAdhoc"
+**.wlan[*].mgmt.typename = "Ieee80211MgmtAdhoc"
 **.wlan[*].mac.qosStation = false
