--- a/examples/wireless/qos/omnetpp.ini
+++ b/examples/wireless/qos/omnetpp.ini
@@ -26,8 +26,8 @@ tkenv-plugin-path = ../../../etc/plugins
 **.opMode = "g(mixed)"
 # access point
 **.ap.wlan[*].mac.address = "10:00:00:00:00:00"
-#**.ap.wlan[*].mgmtType = "Ieee80211MgmtApSimplified"
-#**.wlan[*].mgmtType = "Ieee80211MgmtStaSimplified"
+#**.ap.wlan[*].mgmt.typename = "Ieee80211MgmtApSimplified"
+#**.wlan[*].mgmt.typename = "Ieee80211MgmtStaSimplified"
 **.mgmt.accessPointAddress = "10:00:00:00:00:00"
 #**.mgmt.frameCapacity = 10
 #**.mgmt.ssid = "ns3-80211n"
