--- a/examples/wireless/multiradio/omnetpp.ini
+++ b/examples/wireless/multiradio/omnetpp.ini
@@ -46,9 +46,9 @@ tkenv-plugin-path = ../../../etc/plugins
 *.host2.wlan[0].radio.channelNumber = 1
 
 # use simplified ieee802.11 management (no association, authentication etc.)
-*.host*.**.mgmtType = "Ieee80211MgmtStaSimplified"
-*.router*.**.mgmtType = "Ieee80211MgmtStaSimplified"
-*.accessPoint*.**.mgmtType = "Ieee80211MgmtApSimplified"
+*.host*.**.mgmt.typename = "Ieee80211MgmtStaSimplified"
+*.router*.**.mgmt.typename = "Ieee80211MgmtStaSimplified"
+*.accessPoint*.**.mgmt.typename = "Ieee80211MgmtApSimplified"
 
 # global data rates
 **.wlan*.bitrate = 11Mbps
