--- a/examples/wireless/nic/omnetpp.ini
+++ b/examples/wireless/nic/omnetpp.ini
@@ -60,7 +60,7 @@ network = TestNic
 
 [Config AbstractIeee80211Mac]
 *.host[*].wlan[*].typename = "Ieee80211Interface"
-*.host[*].wlan[*].mgmtType = "Ieee80211MgmtAdhoc"
+*.host[*].wlan[*].mgmt.typename = "Ieee80211MgmtAdhoc"
 
 [Config AbstractUnitDiskRadio]
 *.radioMedium.typename = "UnitDiskRadioMedium" #TODO autoconverted
