All: Added agent.typename deep parameter assignment where needed.

--- a/examples/wireless/multiradio/omnetpp.ini
+++ b/examples/wireless/multiradio/omnetpp.ini
@@ -47,7 +47,9 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # use simplified ieee802.11 management (no association, authentication etc.)
 *.host*.**.mgmt.typename = "Ieee80211MgmtStaSimplified"
+*.host*.**.agent.typename = ""
 *.router*.**.mgmt.typename = "Ieee80211MgmtStaSimplified"
+*.router*.**.agent.typename = ""
 *.accessPoint*.**.mgmt.typename = "Ieee80211MgmtApSimplified"
 
 # global data rates
