--- a/examples/wireless/nic/omnetpp.ini
+++ b/examples/wireless/nic/omnetpp.ini
@@ -61,6 +61,7 @@ network = TestNic
 [Config AbstractIeee80211Mac]
 *.host[*].wlan[*].typename = "Ieee80211Interface"
 *.host[*].wlan[*].mgmt.typename = "Ieee80211MgmtAdhoc"
+*.host[*].wlan[*].agent.typename = ""
 
 [Config AbstractUnitDiskRadio]
 *.radioMedium.typename = "UnitDiskRadioMedium" #TODO autoconverted
